--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
     <main>
         <section id="login">
             <div id="image">
-                ft
+                <!-- Aqui fica a imagem -->
             </div>
             <div id="formulario">
                 <h1>Login</h1>
                 <p>Seja bem-vindo(a) novamente. Faça login para poder acessar a sua conta.</p>
                 <form action="login.php" method="post">
-                    
+
                 </form>
             </div>
         </section>
