--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                         <input type="password" name="passw" id="ipassw" placeholder="Senha" autocomplete="current-password" required minlength="8" maxlength="25">
                     </div>
                     <input type="submit" value="Entrar">
-                    <a href="esqueci.html">
+                    <a href="esqueci.html" class="botao">
                         Esqueci a senha <span class="material-symbols-outlined">mail</span>
                     </a>
                 </form>
