finalizei o projeto login

--- a/index.html
+++ b/index.html
@@ -21,10 +21,12 @@
                     <div class="campo">
                         <span class="material-symbols-outlined">person</span>
                         <input type="email" name="login" id="ilogin" placeholder="Usuário, e-mail ou telefone" autocomplete="email" required maxlength="30">
+                        <label for="ilogin">Login</label>
                     </div>
                     <div class="campo">
                         <span class="material-symbols-outlined">vpn_key</span>
                         <input type="password" name="passw" id="ipassw" placeholder="Senha" autocomplete="current-password" required minlength="8" maxlength="25">
+                        <label for="ipassw">Senha</label>
                     </div>
                     <input type="submit" value="Entrar">
                     <a href="esqueci.html" class="botao">
